fix dashboard workspace wrapping

--- a/frontend/src/pages/dashboard/dashboard.css
+++ b/frontend/src/pages/dashboard/dashboard.css
@@ -5,7 +5,6 @@
     display:flex;
     flex-direction: column;
     flex-wrap: nowrap;
-   
     height: 100%;
 }
 
@@ -14,7 +13,6 @@
     flex-direction: column;
     background-color: aliceblue;
     position: relative;
-    min-height: 100vh;
     margin-left: 150px;
     padding: 5vh;
     
@@ -43,25 +41,29 @@
     background-color: #d4edff;
 }
 
-.workspaces{
+.workspaces {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    width: auto; 
+    height: 100vh;
+    overflow-y: auto; 
+    background-color: aliceblue; 
+    padding: 5vh; 
 }
 
-.items{
+.items {
     display: flex;
-    flex-wrap: wrap;
-    width: 1560px;
-    
+    flex-wrap: wrap; 
+    width: auto; 
+    justify-content: flex-start; 
 }
 
-.workspace{
+.workspace {
+    flex: 0 0 auto; 
     width: 150px;
     height: 210px;
     background-color: white;
-    margin: 0px 20px 20px 0px;
+    margin: 0 20px 20px 0;
     border-radius: 9px;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
@@ -70,19 +72,15 @@
     color: black;
     font-family: 'Poppins', sans-serif;
     font-size: small;
-    max-width: 100%;
-    max-height: 70%; 
     margin: 5%;
-    word-wrap: break-word;
-    overflow: hidden;
-    text-overflow: ellipsis;
     text-align: center;
 }
 
-.delete-button{
+.delete-button {
     background-color: #c1ebff;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
+
 
 .workspace:hover {
     box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.1);
